--- a/map/ze_minecraft_sakura/default_ents.jsonc
+++ b/map/ze_minecraft_sakura/default_ents.jsonc
@@ -1,7 +1,7 @@
-// stripper by 兎RB 25.10.03
+// stripper by 兎RB 25.10.09
 // map ze_minecraft_sakura
 // workshop id 3184013959
-// if find mistranslation tell me
+// if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
 // serial number 日本語:"1" 한국어:"2"
 {
     "modify":
@@ -29,7 +29,7 @@
                         "outputname": "OnMapSpawn",
 						"targetname": "cmd",
                         "inputname": "Command",
-                        "overrideparam": "say language translation stripper 25.10.03",
+                        "overrideparam": "say language translation stripper 25.10.09 by 兎RB,kokopekko,小彩旗",
                         "delay": 1.0,
                         "timestofire": -1
                     }
@@ -8789,4 +8789,5 @@
             ]
 		}
     ]
+
 }
