中文>日本語/한국어

--- a/map/ze_minecraft_sakura/default_ents.jsonc
+++ b/map/ze_minecraft_sakura/default_ents.jsonc
@@ -1,4 +1,4 @@
-// stripper by 兎RB 25.10.09
+// stripper by 兎RB,kokopekko,小彩旗 25.10.09
 // map ze_minecraft_sakura
 // workshop id 3184013959
 // if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
@@ -8791,3 +8791,4 @@
     ]
 
 }
+
