中文>日本語/한국어

--- a/map/ze_minecraft_sakura/47716#entityLumpName.jsonc
+++ b/map/ze_minecraft_sakura/47716#entityLumpName.jsonc
@@ -1,7 +1,7 @@
-// stripper by 兎RB 25.05.25
+// stripper by 兎RB,kokopekko,小彩旗 25.05.25
 // map ze_minecraft_sakura
 // workshop id 3184013959
-// if find mistranslation tell me
+// if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
 {
 	"modify": // remove message output
     [
