--- a/map/ze_re_abydos/default_ents.jsonc
+++ b/map/ze_re_abydos/default_ents.jsonc
@@ -1,7 +1,7 @@
-// stripper by 兎RB 25.10.04
+// stripper by 兎RB 25.10.09
 // map ze_re_abydos
 // workshop id 3261481731
-// if find mistranslation tell me
+// if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
 // serial number 日本語:"1" 한국어:"2"
 {
     "modify":
@@ -28,7 +28,7 @@
                         "outputname": "OnMapSpawn",
 						"targetname": "severadmin",
                         "inputname": "Command",
-                        "overrideparam": "say language translation stripper 25.10.04",
+                        "overrideparam": "say language translation stripper 25.10.09 by 兎RB",
                         "delay": 1.0,
                         "timestofire": -1
                     }
