--- a/map/ze_purification_a1/31740#entityLumpName.jsonc
+++ b/map/ze_purification_a1/31740#entityLumpName.jsonc
@@ -1,6 +1,7 @@
 // stripper by 兎RB 25.03.29
 // map ze_purification_a1
-// workshop id 33128279930
+// workshop id 3128279930
+// if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
 {
     "modify":
     [
